--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -1,24 +1,19 @@
-
-
-<!-- Top alignment Chat bubble -->
-<div class="cxpChat-Container" *ngIf = "isComponentInitialized()" >
-  <div class = "cxpChat-cellContainer">
-    <div  class="cxpChat-ConfContainer" *ngIf="isChatBubbleVisible">
-      <div class="cxpChat-ConfText">
-          A Microsoft Support engineer will engage with you to help answer your questions.<br>
-      </div>
-      <div class = "cxpChat-actionBtnContainer">
-          <input class="custom-button inactive-button white-border" (click)="hideChatBubble(true)"  type="button" value="Maybe later" />
-          <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button" value="Confirm & Start!" />
-      </div>
+<div #chatComponentContainer *ngIf="isComponentInitialized()">
+  <div class="cxpChat-ConfContainer" *ngIf="showChatConfDialog">
+    <div class="cxpChat-ConfText">
+      A Microsoft Support engineer will engage with you to help answer your questions.<br>
+    </div>
+    <div class="cxpChat-actionBtnContainer">
+      <input class="custom-button inactive-button white-border" (click)="hideChatBubble(true)" type="button"
+        value="Maybe later" />
+      <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button"
+        value="Confirm & Start!" />
     </div>
   </div>
 
-  <div class = "cxpChat-cellContainer">
-      <div *ngIf="isChatBubbleVisible" class="arrow-bottom"></div>
-  </div>
+  <div *ngIf="showChatConfDialog" class="arrow-bottom"></div>
 
-  <div class = "cxpChat-cellContainer">
-      <button type="button" (click)="toggleChatBubble()" class="custom-button confirm remove-left-margin"><i class='fa fa-comments'></i> Chat Now!</button>
+  <div class='chatBubble' (click)="toggleChatBubble()">
+    <i class="fa fa-comments chatIcon" aria-hidden="true"></i>
   </div>
 </div>
