Show Keywords in Home Page

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
@@ -9,13 +9,13 @@
     <div class="image-container"><img [src]="categoryImgPath" /></div>
     <h2 class="category-title">{{category.name}}</h2>
     <p class="category-description">{{category.description}}</p>
-    <!-- <div> -->
-    <!-- <span class="keyword-label">Keywords</span> -->
-    <!-- <div class="keywords">
+    <div>
+    <span class="keyword-label">Keywords</span>
+    <div class="keywords">
           <div class="keyword" [style.border-color]="category.color" *ngFor="let keyword of category.keywords">
             {{keyword}}
           </div>
-        </div> -->
-    <!-- </div> -->
+        </div>
+    </div>
   </div>
 </div>
