--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
@@ -1,6 +1,7 @@
 <detector-control *ngIf="!hideDetectorControl && detectorResponse && !analysisMode"></detector-control>
 <div style="padding:0px 20px">
   <detector-view [analysisMode]="analysisMode" [isAnalysisView]="isAnalysisView" [detectorResponse]="detectorResponse" [error]="error" [startTime]="detectorControlService.startTime" [endTime]="detectorControlService.endTime"
-   [developmentMode]="false" [detector]="detectorName" [hideDetectorHeader]="hideDetectorControl">
+   [developmentMode]="false" [detector]="detectorName" [hideDetectorHeader]="hideDetectorControl"
+   [isCategoryOverview]="isCategoryOverview">
   </detector-view>
 </div>
