--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
@@ -64,7 +64,8 @@ $chatBubble-color: rgb(0, 120, 212);
     padding-top: 18px;
     padding-right: 24px;
     padding-bottom: 20px;
-    padding-left: 24px;    
+    padding-left: 24px;  
+    width: 33em;  
 }
 
 
