--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/message-flow/dynamic-analysis/dynamic-analysis.component.html
@@ -17,6 +17,6 @@
     </div> -->
   </div>
 
-  <ng-template #loadingMessage>
+  <!-- <ng-template #loadingMessage>
       <loading-message></loading-message>
-  </ng-template>
+  </ng-template> -->
