--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
@@ -1,16 +1,16 @@
 @import "../../../../../app-service-diagnostics/src/styles/common/variables";
 @import "../../../../../app-service-diagnostics/src/styles/controls/buttons";
 
-$chatBubble-color: rgb(0, 120, 212);
+$chatBubble-color:#008080;
+$zIndex:99;
 
 .chatBubble {
     position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: ghostwhite;
-    width:5em;
-    height:5em;
+    width:4em;
+    height:4em;
     bottom:10px;
     left:10px;
     text-align: center;
@@ -18,6 +18,17 @@ $chatBubble-color: rgb(0, 120, 212);
     border-radius:50%;
     cursor: pointer;
     background-color: $chatBubble-color;
+    z-index:$zIndex;
+}
+
+.agentImage {
+    height: 2em;
+    width: 2em;
+    border-radius: 50%;
+}
+
+.agentName {
+    padding-left:4px;
 }
 
 .chatIcon {
@@ -29,8 +40,9 @@ $chatBubble-color: rgb(0, 120, 212);
     width: 2.5%;
     height: 0;
     position:fixed;
-    bottom:5.9em;
-    left:2.5em;
+    bottom:4.9em;
+    left:2em;
+    z-index:$zIndex + 1;
  }
 
  .arrow-bottom::before {
@@ -38,7 +50,7 @@ $chatBubble-color: rgb(0, 120, 212);
     display: block;
     width: 0;
     margin-top:-10px;
-    z-index:100;
+    z-index:$zIndex + 1;
       
     border-left: 10px solid transparent;
     border-right: 10px solid  transparent;
@@ -51,12 +63,12 @@ $chatBubble-color: rgb(0, 120, 212);
     color:white;
     font-size:14px;
     padding: 5px;
-    z-index:99;
+    z-index:$zIndex;
     border-radius: 2px;
     border:solid 1px $chatBubble-color;
     position: fixed;
-    left:2.4em;
-    bottom:6.1em;
+    left:1.8em;
+    bottom:5.3em;    
 }
 
 
@@ -65,7 +77,7 @@ $chatBubble-color: rgb(0, 120, 212);
     padding-right: 24px;
     padding-bottom: 20px;
     padding-left: 24px;  
-    width: 33em;  
+    width: 30em;  
 }
 
 
