Add feedback button

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
@@ -198,7 +198,7 @@
       [maskChar]="'-'" [validateOnFocusOut]="true" [getErrorMessage]="getErrorMessageOnTextField"></fab-masked-text-field>
   </div>
   <div style="padding:15px 0px">
-    <fab-primary-button contentStyle="margin-right:10px" text="Apply" (onClick)="applyTimeRange()"></fab-primary-button>
+    <fab-primary-button style="margin-right:10px" text="Apply" (onClick)="applyTimeRange()"></fab-primary-button>
     <fab-default-button text="Cancel" (onClick)="cancelTimeRange()"></fab-default-button>
   </div>
 </fab-callout>
