--- a/AngularApp/projects/app-service-diagnostics/src/app/supportbot/common/button-message/button-message.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/supportbot/common/button-message/button-message.component.html
@@ -1,5 +1,13 @@
-<div [ngClass]="{'animated bounceOutLeft': showComponent === false}" *ngIf="showComponent">
+<!-- <div [ngClass]="{'animated bounceOutLeft': showComponent === false}" *ngIf="showComponent">
     <button *ngFor="let item of buttonList; let i = index" type="button" class="custom-button bot-button" style="margin-right:20px;min-width:150px" (click)="onClick(item)">
         {{item.title}}
     </button>
+</div> -->
+
+
+<div [ngClass]="{'animated bounceOutLeft': showComponent === false}" *ngIf="showComponent">
+    <button *ngFor="let item of buttonList; let i = index" type="button" class="custom-button bot-button" style="margin-right:20px;min-width:30px" (click)="onClick(item)">
+        {{item.title}}
+    </button>
 </div>
+
