--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -3,7 +3,7 @@
     <h2 tabindex="0" class="home-title">{{homePageText.title}}</h2>
     <p tabindex="0" class="home-description">{{homePageText.description}}</p>
     <p class="home-description">If you would like to look at the health check then <a (click)="openAvaAndPerf()">click here.</a>You can also ask
-      chatbot <a>Genie</a> any questions you may have</p>
+      chatbot <a (click)="openGeniePanel()">Genie</a> any questions you may have</p>
   </div>
   <div class="home-container">
     <!-- <div style="margin:25px 0px;" (keyup.escape)="clearSearch()" role="search">
@@ -33,4 +33,5 @@
   <div class="privacy-statement" tabindex="0">
     <a href="https://azure.microsoft.com/en-us/support/legal/?amp%3Bclcid=0x9" target="_blank">Privacy</a>
   </div>
+  <genie-panel></genie-panel>
 </div>
